--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
 .My_Logo {
     width: 22%;
     padding: 1%;
-    background-color: aqua;
+   
     height: 65px;
+    justify-content: center;
 }
 
 nav {
@@ -23,14 +24,16 @@ nav {
     padding: 1%;
     color: #174655;
     text-align: right;
-    background-color: blueviolet;
+
+}
+
+.Main_logo{
+    width:100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 
-.Main_logo {
-    text-align: center;
-    width: 70px;
-}
 
 ul {
    width: 70%;
@@ -39,7 +42,7 @@ ul {
 
 li {
    
-    background-color: beige;
+
     margin-left: 10px;
     padding: 5px;
     padding-left: 5px;
@@ -63,7 +66,7 @@ li {
 /* Hero Section */
 
 .hero {
-    background-color: brown;
+ 
 
 }
 
